fix: update file permissions and enhance password handling
- Changed file permissions for multiple documents and scripts to ensure proper execution rights.
- Updated `LoginUser` class to support a new method `setInfoAndReturn` for improved user info handling.
- Enhanced `TokenAuthenticationFilter` to utilize the new method for setting user information.
- Added new fields in `DeclareHospitalRespVO` and `DeclareProgressReportVO` for project type details and reporting window times.
- Implemented password strength validation in user-related request objects and updated error codes for password validation failures.
- Improved password handling in user services to enforce stronger password policies and checks.

Made-with: Cursor